--- a/Source/Client/FlightBooking_Android/app/src/main/res/values/colors.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/values/colors.xml
@@ -48,7 +48,6 @@
     <color name="FireBrick">#B22222</color>
     <color name="ForestGreen">#228B22</color>
 
-    <color name="GreenYellow">#ADFF2F</color>
     <color name="Gold">#FFD700</color>
     <color name="Green">#008000</color>
     <color name="GreenCyan">#3fddb6</color>
@@ -66,14 +65,14 @@
 
     <color name="LightPink">#FFB6C1</color>
     <color name="LightSalmon">#FFA07A</color>
-    <color name="LightYellow">#FFFFE0</color>
+
     <color name="Lime">#00FF00</color>
     <color name="LightSeaGreen">#20B2AA</color>
     <color name="LightBlue">#ADD8E6</color>
     <color name="Lavender">#E6E6FA</color>
     <color name="LightCyan">#E0FFFF</color>
     <color name="LimeGreen">#32CD32</color>
-    <color name="LightGoldenrodYellow">#FAFAD2</color>
+
     <color name="Linen">#FAF0E6</color>
     <color name="LemonChiffon">#FFFACD</color>
     <color name="LavenderBlush">#FFF0F5</color>
@@ -155,7 +154,10 @@
     <color name="Wheat">#F5DEB3</color>
 
     <color name="Yellow">#FFFF00</color>
-    <color name="YellowGreen">#9ACD32</color>
+    <color name="YellowDark">#ddd33d</color>
+    <color name="YellowLight">#FFFFE0</color>
+    <color name="YellowGreen">#ADFF2F</color>
+    <color name="YellowLightGoldenrod">#FAFAD2</color>
 
     <color name="colorAccent">#FF3F80</color>
     <color name="colorAccentLight">#FF80AB</color>
