--- a/Source/Client/FlightBooking_Android/app/src/main/res/drawable/ic_style_dialog.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/drawable/ic_style_dialog.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <inset xmlns:android="http://schemas.android.com/apk/res/android"
-    android:insetBottom="@dimen/activity_margin_min"
-    android:insetLeft="@dimen/activity_margin_min"
-    android:insetRight="@dimen/activity_margin_min"
-    android:insetTop="@dimen/activity_margin_min">
+    android:insetBottom="@dimen/margin"
+    android:insetLeft="@dimen/margin"
+    android:insetRight="@dimen/margin"
+    android:insetTop="@dimen/margin">
 
     <shape android:shape="rectangle">
         <corners android:radius="5dp" />
