--- a/Source/Client/FlightBooking_Android/app/src/main/res/layout/content_main.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/layout/content_main.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.yosta.flightbooking.MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,21 +13,21 @@
         <android.support.v7.widget.AppCompatTextView
             style="@style/AppTheme.TextView_Title.Bold"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#ddd33d"
+            android:layout_height="?actionBarSize"
+            android:background="@color/Yellow"
             android:gravity="center"
-            android:padding="@dimen/activity_padding_min"
+            android:padding="@dimen/margin"
             android:text="FLIGHT INFORMATION"
             android:textColor="#1b1b1b" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/activity_margin_min"
+            android:layout_marginBottom="@dimen/margin_x2"
+            android:baselineAligned="false"
             android:orientation="horizontal"
-            android:padding="@dimen/activity_padding_min"
-            android:weightSum="3"
-            android:baselineAligned="false">
+            android:padding="@dimen/margin"
+            android:weightSum="3">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -51,89 +49,71 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="9:30p"
-                    android:textColor="#ddd33d"
-                    android:textSize="24sp" />
+                    android:textColor="@color/Yellow"
+                    android:textSize="18sp" />
 
                 <android.support.v7.widget.AppCompatTextView
                     style="@style/AppTheme.TextView_Title.White"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="YYZ, Toronta"
-                    android:textSize="16sp" />
+                    android:text="YYZ, Toronta" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_margin_min"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin"
                     android:orientation="horizontal">
 
                     <android.support.v7.widget.AppCompatImageView
-                        android:layout_width="@dimen/icon_size_min_ex"
-                        android:layout_height="@dimen/icon_size_min_ex"
+                        android:layout_width="@dimen/icon_size_x2"
+                        android:layout_height="@dimen/icon_size_x2"
                         android:layout_gravity="center"
                         app:srcCompat="@drawable/ic_vector_calender" />
 
                     <android.support.v7.widget.AppCompatTextView
                         style="@style/AppTheme.TextView_Sub_Title.White"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/margin"
+                        android:layout_marginStart="@dimen/margin"
                         android:text="22 June, 2015" />
                 </LinearLayout>
+
             </LinearLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:orientation="vertical">
-
-                <android.support.v7.widget.AppCompatTextView
-                    style="@style/AppTheme.TextView_Title.White"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="DEPART"
-                    android:textSize="12sp" />
-
-                <android.support.v7.widget.AppCompatTextView
-                    style="@style/AppTheme.TextView_Title.White"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="9:30p"
-                    android:textColor="#ddd33d"
-                    android:textSize="24sp" />
-
-                <android.support.v7.widget.AppCompatTextView
-                    style="@style/AppTheme.TextView_Title.White"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="YYZ, Toronta"
-                    android:textSize="16sp" />
+                android:layout_height="match_parent"
+                android:layout_weight="1">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_margin_min"
-                    android:orientation="horizontal">
+                    android:layout_centerInParent="true"
+                    android:orientation="vertical">
 
                     <android.support.v7.widget.AppCompatImageView
-                        android:layout_width="@dimen/icon_size_min_ex"
-                        android:layout_height="@dimen/icon_size_min_ex"
+                        android:layout_width="@dimen/icon_size_x6"
+                        android:layout_height="@dimen/icon_size_x6"
                         android:layout_gravity="center"
-                        app:srcCompat="@drawable/ic_vector_calender" />
+                        app:srcCompat="@drawable/ic_vector_plane" />
 
                     <android.support.v7.widget.AppCompatTextView
-                        style="@style/AppTheme.TextView_Sub_Title.White"
+                        style="@style/AppTheme.TextView_Title.White"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:text="22 June, 2015" />
+                        android:layout_marginTop="@dimen/margin"
+                        android:gravity="center"
+                        android:text="6h55 nonstop"
+                        android:textSize="12sp" />
+
+
                 </LinearLayout>
-            </LinearLayout>
+            </RelativeLayout>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -146,7 +126,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="DEPART"
+                    android:text="ARRIVE"
                     android:textSize="12sp" />
 
                 <android.support.v7.widget.AppCompatTextView
@@ -155,44 +135,164 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="9:30p"
-                    android:textColor="#ddd33d"
-                    android:textSize="24sp" />
+                    android:textColor="@color/Yellow"
+                    android:textSize="18sp" />
 
                 <android.support.v7.widget.AppCompatTextView
                     style="@style/AppTheme.TextView_Title.White"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="YYZ, Toronta"
-                    android:textSize="16sp" />
+                    android:text="YYZ, Toronta" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/activity_margin_min"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin"
                     android:orientation="horizontal">
 
                     <android.support.v7.widget.AppCompatImageView
-                        android:layout_width="@dimen/icon_size_min_ex"
-                        android:layout_height="@dimen/icon_size_min_ex"
+                        android:layout_width="@dimen/icon_size_x2"
+                        android:layout_height="@dimen/icon_size_x2"
                         android:layout_gravity="center"
                         app:srcCompat="@drawable/ic_vector_calender" />
 
                     <android.support.v7.widget.AppCompatTextView
                         style="@style/AppTheme.TextView_Sub_Title.White"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/margin"
+                        android:layout_marginStart="@dimen/margin"
                         android:text="22 June, 2015" />
                 </LinearLayout>
+
             </LinearLayout>
 
         </LinearLayout>
 
-        <include
-            layout="@layout/view_item_vertical_separate"
+        <include layout="@layout/view_item_vertical_separate" />
+
+        <android.support.v7.widget.AppCompatTextView
+            style="@style/AppTheme.TextView_Title.White"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin"
+            android:gravity="center"
+            android:maxLines="2"
+            android:minLines="1"
+            android:padding="@dimen/margin"
+            android:text="Air Canada 848 Boeing 777 Terminal 3" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:baselineAligned="true"
+            android:orientation="horizontal"
+            android:weightSum="3">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.AppCompatTextView
+                    style="@style/AppTheme.TextView_Title.White"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:minLines="1"
+                    android:text="Gate" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    style="@style/AppTheme.TextView_Title.White"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:minLines="1"
+                    android:text="10B"
+                    android:textColor="@color/Yellow" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.AppCompatTextView
+                    style="@style/AppTheme.TextView_Title.White"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:minLines="1"
+                    android:text="Gate" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    style="@style/AppTheme.TextView_Title.White"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:minLines="1"
+                    android:text="10B"
+                    android:textColor="@color/Yellow" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+                <android.support.v7.widget.AppCompatTextView
+                    style="@style/AppTheme.TextView_Title.White"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:minLines="1"
+                    android:text="Gate" />
+
+                <android.support.v7.widget.AppCompatTextView
+                    style="@style/AppTheme.TextView_Title.White"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin"
+                    android:gravity="center"
+                    android:maxLines="2"
+                    android:minLines="1"
+                    android:text="10B"
+                    android:textColor="@color/Yellow" />
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+        <Button
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="@dimen/margin"
+            android:background="@drawable/ic_style_button_round_corners_yellow_none"
+            android:text="GET E - BOARDING PASS"
+            android:textColor="#1b1b1b" />
+
 
     </LinearLayout>
 
