Create Flight input layout

--- a/Source/Client/FlightBooking_Android/app/src/main/res/values/colors.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/values/colors.xml
@@ -154,7 +154,7 @@
     <color name="Wheat">#F5DEB3</color>
 
     <color name="Yellow">#FFFF00</color>
-    <color name="YellowDark">#ddd33d</color>
+    <color name="YellowDark">#fcd703</color>
     <color name="YellowLight">#FFFFE0</color>
     <color name="YellowGreen">#ADFF2F</color>
     <color name="YellowLightGoldenrod">#FAFAD2</color>
