--- a/Source/Client/FlightBooking_Android/app/src/main/res/values/dimens.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/values/dimens.xml
@@ -26,7 +26,9 @@
     <dimen name="card_view_x4_3">128dp</dimen>
 
     <dimen name="text_size_title">14sp</dimen>
-    <dimen name="text_size_sub_title">12sp</dimen>
+    <dimen name="text_size">12sp</dimen>
+    <dimen name="text_size_x2">24sp</dimen>
+    <dimen name="text_size_x3">36sp</dimen>
 
     <dimen name="buttonBigBorders">24dp</dimen>
     <dimen name="buttonBorders">5dp</dimen>
