--- a/Source/Client/FlightBooking_Android/app/src/main/res/values/styles.xml
+++ b/Source/Client/FlightBooking_Android/app/src/main/res/values/styles.xml
@@ -81,7 +81,7 @@
     </style>
 
     <style name="AppTheme.TextView_Sub_Title.ColorPrimary" parent="AppTheme.TextView_Title.ColorPrimary">
-        <item name="android:textSize">@dimen/text_size_sub_title</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/colorPrimary</item>
     </style>
@@ -105,13 +105,13 @@
     </style>
 
     <style name="AppTheme.TextView_Sub_Title" parent="AppTheme.TextView_Title.Bold">
-        <item name="android:textSize">@dimen/text_size_sub_title</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@color/colorTextColorSecondary</item>
     </style>
 
     <style name="AppTheme.TextView_Sub_Title.White" parent="AppTheme.TextView_Title.Bold">
-        <item name="android:textSize">@dimen/text_size_sub_title</item>
+        <item name="android:textSize">@dimen/text_size</item>
         <item name="android:textStyle">normal</item>
         <item name="android:textColor">@android:color/white</item>
     </style>
